fixed editor issue on ios

--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,13 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+
+
+ckeditor {
+  -webkit-user-select: text;
+  user-select: text
+}
+
 ckeditor.inline_editor {
   margin-top: 32px;
   width: 100%;
